# MidasGtsExporter

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: roadmap.md
docs/compatibility/: midas-gts-exporter-csharp.md
docs/contracts/: exporter-contract.md  fpn-parser-contract.md  tauri-command-contract.md
openspec/changes/archive/2026-05-08-bootstrap-rust-tauri-port/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase1-rust-core/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase1-rust-core/specs/rust-core/: spec.md
openspec/changes/implement-phase2-exporters/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase2-exporters/specs/exporters/: spec.md
openspec/changes/implement-phase3-tauri-gui/: design.md  proposal.md  tasks.md
openspec/changes/implement-phase3-tauri-gui/specs/tauri-gui/: spec.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  error.rs  fpn_reader.rs  lib.rs  main.rs  model.rs
src-tauri/src/exporters/: abaqus.rs  flac3d.rs  lsdyna.rs  mod.rs
tests/fixtures/midas_gts/: GtsModel_Coarse.fpn  GtsModel_Test.fpn
